# shelfmark

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  docker-compose.dev.extbp.yml  docker-compose.dev.tor.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  env.py  genDebug.sh  package-lock.json  pyproject.toml  requirements-base.txt  requirements-shelfmark.txt  tor.sh  traefik-tls.yml
.github/: dependabot.yml
.github/workflows/: build-and-publish-docker-image.yml  ci.yml  codeql.yml
compose/: docker-compose.lite.yml  docker-compose.tor.yml  docker-compose.yml
docs/: environment-variables.md  reverse-proxy.md
docs/dev/: plugin-settings.md
scripts/: bypasser_permission_lab.sh  fix_permissions.py
shelfmark/: __init__.py  __main__.py  main.py
shelfmark/api/: __init__.py  websocket.py
shelfmark/bypass/: __init__.py  fingerprint.py  internal_bypasser.py
shelfmark/config/: __init__.py  email_settings.py  notifications_settings.py  settings.py  users_settings.py
shelfmark/core/: __init__.py  activity_routes.py  activity_view_state_service.py  admin_routes.py  admin_settings_routes.py  auth_modes.py  cache.py  config.py  cwa_user_sync.py  download_history_service.py  external_user_linking.py  logger.py  mirrors.py  models.py  oidc_auth.py  oidc_routes.py  onboarding.py  path_mappings.py  prefix_middleware.py  queue.py  request_helpers.py  request_policy.py  request_routes.py  request_validation.py  requests_service.py  search_plan.py  self_user_routes.py  user_db.py  (+1 more)
src/: README.md
tests/: README.md  conftest.py
(+258 files in other folders)
